--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,7 @@ name: Deploy
 on:
   push:
     branches:
-      
-main
+      - main
 
 jobs:
   build:
@@ -12,28 +11,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      
-name: Checkout repo
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      
-name: Setup Node
-      uses: actions/setup-node@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
 
-      
-name: Install dependencies
-      uses: bahmutov/npm-install@v1
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
 
-      
-name: Build project
-      run: npm run build
+      - name: Build project
+        run: npm run build
 
-      
-name: Upload production-ready build files
-      uses: actions/upload-artifact@v3
-      with:
-        name: production-files
-        path: ./dist
+      - name: Upload production-ready build files
+        uses: actions/upload-artifact@v3
+        with:
+          name: production-files
+          path: ./dist
 
   deploy:
     name: Deploy
@@ -42,16 +36,14 @@ name: Upload production-ready build files
     if: github.ref == 'refs/heads/main'
 
     steps:
-      
-name: Download artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: production-files
-        path: ./dist
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: production-files
+          path: ./dist
 
-      
-name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
